<resources>
    <string name="app_name">DiceOut</string>
    <string name="action_settings">Settings</string>
    <string name="help_msg">In order to roll the dice please tap DIE button at the bottom of the screen.</string>
    <string name="roll_btn">roll</string>
    <string name="intro_image">intro image</string>
    <string name="info_txt">Let\'s play!</string>
    <string name="score_txt">Score: 0</string>
    <string name="die_one_img">Die one img</string>
    <string name="die_two_img">Die two img</string>
    <string name="die_tree_img">Die tree img</string>
</resources>
